# fu-school-scheduler

./: .gitignore  CLAUDE (2).md  README.md  gitignore.txt
backend/: .dockerignore  Dockerfile  pyproject.toml  scheduler.db
backend/alembic/: env.py
backend/alembic/versions/: a55842666333_initial_schema.py
backend/app/: db.py  main.py  seed.py
backend/app/api/: class_groups.py  courses.py  schedule.py  subjects.py  teachers.py  time_slots.py
backend/app/models/: __init__.py  class_group.py  course.py  schedule.py  subject.py  teacher.py  time_slot.py
backend/app/repositories/: __init__.py  class_group_repo.py  course_repo.py  schedule_repo.py  subject_repo.py  teacher_repo.py  time_slot_repo.py
backend/app/scheduling/: feasibility_checker.py  interfaces.py  ortools_scheduler.py
backend/app/schemas/: class_group.py  course.py  schedule.py  subject.py  teacher.py  time_slot.py
backend/app/services/: crud_service.py  schedule_service.py
backend/school_scheduler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_feasibility_checker.py  test_ortools_scheduler.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx
frontend/app/classes/: page.tsx
frontend/app/courses/: page.tsx
frontend/app/schedule/: page.tsx
frontend/app/subjects/: page.tsx
frontend/app/teachers/: page.tsx
frontend/components/: ConflictReport.tsx  ScheduleGrid.tsx  Sidebar.tsx
frontend/lib/: api.ts
specs/001-school-scheduler/: SUMMARY.md  data-model.md  plan.md  quickstart.md  spec.md  tasks.md
(+2 files in other folders)
